--- a/.gitignore
+++ b/.gitignore
@@ -1,49 +1,8 @@
-# Dependencies
 node_modules/
-
-# Build output
 dist/
-
-# Environment files
-.env
-.env.local
-.env.*.local
-
-# Database
 data/
 *.db
-*.db-journal
-*.db-shm
-*.db-wal
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-
-# OS files
+.env
+.env.*
 .DS_Store
-Thumbs.db
-
-# Logs
-logs/
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Runtime
-pids/
-*.pid
-*.seed
-*.pid.lock
-
-# Test coverage
-coverage/
-.nyc_output/
-
-# Misc
-*.tgz
-.npm
-
